[project]
name = "isaac-curobo-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "isaacsim[all,extscache]==5.0.0",
    "curobo",
    "torch>=2.0",
    "numpy",
    "setuptools>=45",
    "setuptools-scm>=6.2",
]

[tool.uv.workspace]
members = ["curobo"]

[tool.uv]
no-build-isolation-package = ["curobo"]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
isaacsim = { index = "nvidia" }
curobo = { workspace = true }
